Fix overflow issue
- fix menu overflow
- add docker con baner

--- a/_scss/_mobile.scss
+++ b/_scss/_mobile.scss
@@ -43,11 +43,17 @@
     h4 {
         font-size: 16px;
     }
-    // .block {
-    //     text-align: center;
-    // }
     .nav-secondary-tabs .search-form input[type=search] {
         min-width: auto;
+    }
+    .nav-container,
+    .nav-secondary  {
+        overflow: hidden;
+    }
+    .search-form {
+        float: left;
+        margin: 5px 15px 0 0px;
+        width: 250px;
     }
   }
 
@@ -325,16 +331,6 @@
   and (min-device-width: 768px) 
   and (max-device-width: 1024px) 
   and (orientation: portrait) {
-
-    // .tabs li a {
-    //     color: #fff;
-    //     padding: 17px 9px 12px 5px;
-    //     float: left;
-    //     opacity: 0.8;
-    // }
-    // .navbar-toggle {
-    //     display: block!important;
-    // }
     .nav-secondary input[type=search] {
         background: rgba(255, 255, 255, 0.17) url(/images/search.png) no-repeat;
         background-position: 10px 9px;
