--- a/_scss/_utilities.scss
+++ b/_scss/_utilities.scss
@@ -68,7 +68,7 @@ i.fa.fa-outdent {
 .search-form {
     float: left;
     margin: 5px 15px 0 0px;
-    width: 200px;
+    width: 250px;
     & input[type=text] {
         background: rgba(0, 0, 0, 0.17) url("/images/search.png") no-repeat;
         background-position: 10px 9px;
@@ -93,6 +93,7 @@ i.fa.fa-outdent {
     -o-transition: all 0.2s ease;
     transition: all 0.2s ease;
     padding: 0px 0 0 35px;
+    width: 250px;
 }
 
 .search-form input[type=text]:focus {
